<resources>
    <string name="app_name">QuizzApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="full_name">FULL NAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="register">REGISTER</string>
    <string name="inicio">Inicio</string>
    <string name="registerrr">register</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="gt_trivia">GT-TRIVIA</string>
    <string name="login">LOGIN</string>
</resources>