<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6A00BCD4"
    tools:context=".InicioFragment">

    <TextView
        android:id="@+id/Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="145dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/welcome_to"
        android:textColor="#006793"
        android:textSize="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="205dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/gt_trivia"
        android:textColor="@color/sky_blue"
        android:textSize="50dp"
        app:layout_constraintEnd_toEndOf="@id/Welcome"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@id/Welcome"
        app:layout_constraintTop_toBottomOf="@id/Welcome" />

    <ImageView
        android:id="@+id/image_quet"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="290dp"
        android:src="@drawable/imageview"
        app:layout_constraintEnd_toEndOf="@id/Welcome"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="@id/Welcome"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="460dp"
        android:width="227dp"
        android:height="60dp"
        android:backgroundTint="@color/sky_blue"
        android:fontFamily="sans-serif-black"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_quet" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="550dp"
        android:width="227dp"
        android:height="60dp"
        android:backgroundTint="@color/sky_blue"
        android:fontFamily="sans-serif-black"
        android:text="Register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonLogin" />


</FrameLayout>